fixed mobile event hero and files alignment for mobile

--- a/assets/sass/section/agenda/single.sass
+++ b/assets/sass/section/agenda/single.sass
@@ -108,11 +108,11 @@
                 flex-direction: column
                 margin-bottom: 0
                 h1
-                    margin-top: 0 !important
+                    margin-top: var(--hero-spacing) !important
                     span
                         margin-top: var(--hero-spacing)
                 .taxonomies-single
-                    margin-bottom: var(--hero-spacing)
+                    margin-bottom: 0
                     a
                         @include h6
     
